objects/sf_devops__Vcs_Synch_State__c.object
<CustomObject>
    <fields>
        <fullName>sf_devops__Last_Synch_Date__c</fullName>
        <description>Date and Time when this was last synchronized with the VCS.</description>
        <label>Last Synch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Project that this state belongs to</description>
        <label>Project</label>
        <referenceTo>sf_devops__Project__c</referenceTo>
        <relationshipLabel>Synch States</relationshipLabel>
        <relationshipName>Synch_States</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Retry_Count__c</fullName>
        <description>The number of times this synchronization was retried because of an error.</description>
        <label>Retry Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf_devops__Synch_Job_Id__c</fullName>
        <description>The Apex Scheduled Job ID that is currently synchronizing this.</description>
        <label>Synch Job Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Synch_Name__c</fullName>
        <description>The name of this Synch State, used for logging.</description>
        <label>Synch Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Synch_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The status of the current synch operation.</description>
        <label>Synch Status</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Vcs Synch States</relationshipLabel>
        <relationshipName>Vcs_Synch_States</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vcs Synch State</label>
    <listViews>
        <fullName>sf_devops__All</fullName>
        <columns>NAME</columns>
        <columns>sf_devops__Synch_Name__c</columns>
        <columns>sf_devops__Synch_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VSS-{000000}</displayFormat>
        <label>Vcs Synch State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vcs Synch States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>